[package]
name = "liquid-cache-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }


[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
liquid-cache-parquet = { workspace = true }
object_store = { workspace = true, features = ["aws", "http"] }
liquid-cache-common = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
async-stream = "0.3"
tempfile = { workspace = true }
axum = "0.8.3"
serde = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
sysinfo = { version = "0.34.2", default-features = false, features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
] }
uuid = { workspace = true }
fastrace = { workspace = true }
fastrace-futures = { workspace = true }

[dev-dependencies]
liquid-cache-client = { workspace = true }
insta = { version = "1.42.2" }
