[package]
name = "liquid-cache-storage"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
description = { workspace = true }
repository = { workspace = true }


[dependencies]
async-stream = "0.3.6"
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
liquid-cache-common = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
fastlanes = "0.2.0"
num-traits = "0.2.19"
fsst-rs = "0.5.3"
ahash = { workspace = true }
tempfile = { workspace = true }
congee = { workspace = true }
log = { workspace = true }
parquet = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.9"
libc = "0.2.175"

[dev-dependencies]
tempfile = { workspace = true }
paste = "1.0.15"
shuttle = "0.8.1"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
serde.workspace = true
serde_json = { workspace = true }
mimalloc = "0.1.47"
clap = { version = "4.5.45", features = ["derive"] }
divan = "0.1.21"

[features]
shuttle = []


[[bench]]
name = "fsst_view_study"
path = "study/fsst_view.rs"
harness = false

[[bench]]
name = "fsstarray"
path = "bench/fsstarray.rs"
harness = false

[[bench]]
name = "byte_array_vs_byte_view"
path = "bench/byte_array_vs_byte_view.rs"
harness = false

[[bench]]
name = "bitpacking"
path = "bench/bitpacking.rs"
harness = false

[[bench]]
name = "liquid_float_array"
harness = false
path = "bench/liquid_float_array.rs"

[[bench]]
name = "cache_storage"
path = "study/cache_storage.rs"
harness = false

[[bench]]
name = "linear_integer_study"
path = "study/linear_integer.rs"
harness = false

[[bench]]
name = "squeeze_integer_study"
path = "study/squeeze_integer.rs"
harness = false
